# acl

./: .hlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  acl.cabal  cabal.project  cabal.project.freeze
.github/workflows/: ci.yml  linting.yml
src/ACL/: ACLEff.hs  Check.hs  Examples.hs  Tracing.hs
src/ACL/Types/: CheckError.hs  Namespace.hs  NamespaceId.hs  Object.hs  Relation.hs  RelationTuple.hs  RewriteRule.hs  Subject.hs  Trace.hs  User.hs
test/: Main.hs
test/ACL/Test/: DisplayTest.hs  Fixtures.hs  RewriteRulesTest.hs  Utils.hs
test/ACL/Test/RewriteRulesTest/: BlocklistTest.hs  CustomRolesTest.hs  FolderDocumentsTest.hs  MultipleRestrictionTest.hs  OrgsPlansTest.hs
