cabal-version: 3.4
name: acl
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Théophile Choutri de Tarlé
maintainer: theophile@choutri.eu
category: ACL
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with: GHC ==9.10.1

-- extra-source-files:
common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoStarIsType
    MagicHash
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
    PackageImports
    RecordWildCards
    StrictData
    TypeFamilies

  default-language: GHC2021

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -fshow-hole-constraints
    -Wno-unticked-promoted-constructors
    -finfo-table-map

library
  import: extensions
  import: ghc-options
  exposed-modules:
    ACL.Check
    ACL.ACLEff
    ACL.Types.CheckError
    ACL.Types.Namespace
    ACL.Types.NamespaceId
    ACL.Types.Object
    ACL.Types.Relation
    ACL.Types.RelationTuple
    ACL.Types.RewriteRule
    ACL.Types.Subject

  build-depends:
    base ^>=4.20.0.0,
    containers,
    text,
    text-display,
    vector,
    optics-core,
    effectful-core,

  hs-source-dirs: src
  default-language: GHC2024

test-suite acl-test
  import: extensions
  import: ghc-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"
  default-language: GHC2024
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ACL.Test.Fixtures
    ACL.Test.Utils
    ACL.Test.RewriteRulesTest
    ACL.Test.RewriteRulesTest.OrgsPlansTest
    ACL.Test.RewriteRulesTest.FolderDocumentsTest
    ACL.Test.DisplayTest

  build-depends:
    acl,
    base ^>=4.20.0.0,
    containers,
    tasty,
    tasty-hunit,
    text,
    text-display,
    vector,
    effectful-core,
