cabal-version: 3.4
name: acl
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Théophile Choutri de Tarlé
maintainer: theophile@choutri.eu
category: ACL
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with: ghc ==9.10.1

-- extra-source-files:
common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MagicHash
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData
    TypeFamilies

  default-language: GHC2021

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -fshow-hole-constraints
    -Wno-unticked-promoted-constructors
    -finfo-table-map

library
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src
  exposed-modules:
    ACL.ACLEff
    ACL.Check
    ACL.Types.CheckError
    ACL.Types.Namespace
    ACL.Types.NamespaceId
    ACL.Types.Object
    ACL.Types.Relation
    ACL.Types.RelationTuple
    ACL.Types.RewriteRule
    ACL.Types.Subject
    ACL.Types.Trace

  build-depends:
    atomic-counter,
    base ^>=4.20.0.0,
    containers,
    effectful-core,
    optics-core,
    text,
    text-display,
    vector,

  hs-source-dirs: src
  default-language: GHC2024

test-suite acl-test
  import: extensions
  import: ghc-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

  default-language: GHC2024
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  -- cabal-gild: discover test --exclude=test/Main.hs
  other-modules:
    ACL.Test.DisplayTest
    ACL.Test.Fixtures
    ACL.Test.RewriteRulesTest
    ACL.Test.RewriteRulesTest.BlocklistTest
    ACL.Test.RewriteRulesTest.FolderDocumentsTest
    ACL.Test.RewriteRulesTest.OrgsPlansTest
    ACL.Test.Utils

  build-depends:
    acl,
    base ^>=4.20.0.0,
    containers,
    effectful-core,
    tasty,
    tasty-hunit,
    text,
    text-display,
    vector,
